# claude-memory_skill_manager

./: .editorconfig  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_manager/: __init__.py  cli.py  config.py
src/claude_manager/agents/: __init__.py  cli.py  models.py  store.py
src/claude_manager/mcp/: __init__.py  cli.py  models.py  store.py
src/claude_manager/memory/: __init__.py  cli.py  models.py  store.py
src/claude_manager/skills/: __init__.py  cli.py  models.py  store.py
src/claude_manager/tui/: __init__.py  fzf.py  screens.py
tests/: test_agents_store.py  test_config.py  test_mcp_store.py  test_memory_store.py  test_skills_store.py
